# graphtransliterator

./: .HISTORY.rst.swp  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  NOTICE  README.rst  Untitled.ipynb  _scratch.ipynb  _setup.py  azure-pipelines.yml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.githooks/: pre-commit
.github/: ISSUE_TEMPLATE.md
.github/actions/setup-poetry-env/: action.yml
.github/workflows/: graphtransliterator.yaml  main.yaml  on-release-main.yaml  pre-release.yaml  publish-to-test-pypi.yml
.tox/flake8/: .tox-config1
.tox/flake8/include/: python3.7m
.tox/py37/: .tox-config1
.tox/py37/tmp/: test_GraphTransliterator_transcurrent  test_GraphTransliteratorcurrent  test_cli_transliterate_testscurrent
docs/: Makefile  advanced_tutorial.rst  api.rst  authors.rst  bundled.rst  cli.rst  code_of_conduct.rst  conf.py  graphtransliterator.rst  index.rst  installation.rst  kudos.rst  make.bat  modules.rst  tutorial.rst  usage.rst
docs/_build/doctrees/: acknowledgements.doctree  advanced_tutorial.doctree  api.doctree  authors.doctree  bundled.doctree  cli.doctree  code_of_conduct.doctree  contributing.doctree  environment.pickle  history.doctree  index.doctree  installation.doctree  kudos.doctree  tutorial.doctree  usage.doctree
docs/_build/html/: .buildinfo  acknowledgements.html  advanced_tutorial.html  api.html  authors.html  bundled.html  cli.html  code_of_conduct.html  contributing.html  genindex.html  history.html  index.html  installation.html  kudos.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorial.html  usage.html
docs/_build/jupyter_execute/: api.ipynb  api.py  cli.ipynb  cli.py  tutorial.ipynb  usage.ipynb  usage.py
docs/_static/: custom.css
graphtransliterator/: __init__.py  ambiguity.py  cli.py  compression.py  core.py  exceptions.py  graphs.py  graphtransliterator.py  initialize.py  process.py  rules.py  schemas.py  types.py  usage.rst  validate.py
graphtransliterator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
graphtransliterator/transliterators/: README.rst  __init__.py  bundled.py  schemas.py
graphtransliterator/transliterators/example/: __init__.py  example.json  example.yaml
graphtransliterator/transliterators/itrans_devanagari_to_unicode/: Untitled.ipynb  __init__.py  itrans_devanagari_to_unicode.json  itrans_devanagari_to_unicode.yaml
paper/: paper.bib  paper.md
scripts/: Untitled.ipynb
tests/: test_ambiguity.py  test_cli.py  test_compression.py  test_coverage.py  test_graphtransliterator.py  test_transliterators.py
(+80 files in other folders)
