[tool.poetry]
name = "graphtransliterator"
version = "1.2.4"
description = "A graph-based transliteration tool"
authors = ["A. Sean Pue <seanpue@users.noreply.github.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/seanpue/graphtransliterator"
documentation = "https://graphtransliterator.readthedocs.org"
packages = [
  {include = "graphtransliterator"}
]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
marshmallow = "^3.20.1"
PyYAML = "^6.0.1"

[tool.poetry.group.dev.dependencies]
bash_kernel = "^0.9.1"
click = "^8.1.7"
coverage = "^7.3.2"
flake8 = "^6.1.0"
jupyter-sphinx = "^0.4.0"
marshmallow = "^3.20.1"
pytest = "^7.4.2"
PyYAML = "^6.0.1"
sphinx-issues = "^3.0.1"
tox = "^4.11.3"
deptry = "^0.12.0"
pre-commit = "^3.5.0"
sphinx-rtd-theme = "^1.3.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py37']
preview = true

[tool.mypy]
files = ["graphtransliterator"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.ruff]
target-version = "py37"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["graphtransliterator"]
